--- a/site/Module2-solution/css/styles.css
+++ b/site/Module2-solution/css/styles.css
@@ -59,7 +59,7 @@ h1 {
   border: 1px solid black;
   top: 0 px;
   right: 0;
-  margin: 0px;*/
+  margin: 0px;
   padding-left: 10px;
   padding-right: 10px;
   
